# 1

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  test.py
maile/: __init__.py  pobieraniemaili.py  request.py
tests/: greetings.py  test_greetings.py
