name = 1
version = 0.0.1
license = <MIT license>
description = Printing e-mails
long_description = file: README.rst
author = <Tomasz Malik>
author_email = <tomekk445@gmail.com>
classifiers=
   

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   

[options.packages.find]
where=src